Fix toml syntax

--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,8 @@ languageCode = 'en-us'
 title = 'Orbis Dei'
 theme = "PaperMod"
 
-menu:
-    main:
-      - name: Saints and Holy Persons
-        identifier: holy-persons
-        url: /holy-persons
-        weight: 0
+[[menu.main]]
+name = "Saints and Holy Persons"
+identifier = "holy-persons"
+url = "/holy-persons"
+weight = 0
