--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,16 @@
 baseURL = 'https://orbis-dei.netlify.app/'
 languageCode = 'en-us'
 title = 'Orbis Dei'
-theme = "PaperMod"
+theme = 'PaperMod'
 
+[menu]
 [[menu.main]]
-name = "Saints and Holy Persons"
-identifier = "holy-persons"
-url = "/holy-persons"
-weight = 0
+  name = 'Saints and Holy Persons'
+  identifier = 'holy-persons'
+  pageRef = 'tags/holy-persons'
+  weight = 10
+[[menu.main]]
+  name = 'Marian Sites'
+  identifier = 'marian-sites'
+  pageRef = '/tags/marian-sites'
+  weight = 10
