--- a/config.toml
+++ b/config.toml
@@ -9,10 +9,14 @@ theme = 'PaperMod'
   pageRef = 'tags/marian-sites'
   weight = 1
 [[menu.main]]
-  name = 'Saints and Holy Persons'
+  name = 'Saints & Holy Persons'
   pageRef = 'tags/holy-persons'
   weight = 2
 [[menu.main]]
+  name = 'Search'
+  pageRef = 'search'
+  weight = 3
+[[menu.main]]
   name = 'Contact'
   pageRef = 'contact'
-  weight = 3
+  weight = 4
