--- a/config.toml
+++ b/config.toml
@@ -5,18 +5,18 @@ theme = 'PaperMod'
 
 [menu]
 [[menu.main]]
-  name = 'Marian Sites'
-  pageRef = 'tags/marian-sites'
-  weight = 1
-[[menu.main]]
   name = 'Saints & Holy Persons'
   pageRef = 'tags/holy-persons'
+  weight = 1
+[[menu.main]]
+  name = 'Marian Sites'
+  pageRef = 'tags/marian-sites'
   weight = 2
 [[menu.main]]
-  name = 'Search'
-  pageRef = 'search'
-  weight = 3
+  name = 'About'
+  pageRef = 'about'
+  weight = 4
 [[menu.main]]
   name = 'Contact'
   pageRef = 'contact'
-  weight = 4
+  weight = 5
