--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,10 @@ theme = 'PaperMod'
   pageRef = 'tags/marian-sites'
   weight = 2
 [[menu.main]]
+  name = 'About'
+  pageRef = 'about'
+  weight = 4
+[[menu.main]]
   name = 'Contact'
   pageRef = 'contact'
   weight = 5
